--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -45,6 +45,7 @@ src/gui/server.cs
 src/gui/session.cs
 src/gui/stats.cs
 src/jumpType.cs
+src/platform.cs
 src/pulseType.cs
 src/report.cs
 src/runType.cs
