encoder table db 0.99. TODO check encoderSQL calls

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -99,6 +99,7 @@ SOURCES = \
 	sqlite/sport.cs\
 	sqlite/speciallity.cs\
 	sqlite/country.cs\
+	sqlite/oldConvert.cs\
 	sqlite/server.cs\
 	execute/event.cs\
 	execute/jump.cs\
