Implementing encoder images

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -263,7 +263,19 @@ RESOURCES = \
 	../images/encoder-rotary-friction.png,encoder-rotary-friction.png \
 	../images/encoder-rotary-axis.png,encoder-rotary-axis.png \
 	../images/encoder-linear-free-weight.png,encoder-linear-free-weight.png \
-	../images/encoder-linear-free-weight-inv.png,encoder-linear-free-weight-inv.png
+	../images/encoder-linear-free-weight-inv.png,encoder-linear-free-weight-inv.png \
+	../images/encoder-linear-inertial.png,encoder-linear-inertial.png \
+	../images/encoder-linear-or-inv-on-person-weighted-moving-pulley1.png,encoder-linear-or-inv-on-person-weighted-moving-pulley1.png \
+	../images/encoder-linear-or-inv-on-person-weighted-moving-pulley2.png,encoder-linear-or-inv-on-person-weighted-moving-pulley2.png \
+	../images/encoder-linear-or-inv-on-weighted-moving-pulley.png,encoder-linear-or-inv-on-weighted-moving-pulley.png \
+	../images/encoder-linear-inclined-plane.png,encoder-linear-inclined-plane.png \
+	../images/encoder-rotary-friction-pulley.png,encoder-rotary-friction-pulley.png \
+	../images/encoder-rotary-friction-pulley-axis.png,encoder-rotary-friction-pulley-axis.png \
+	../images/encoder-friction-inertial.png,encoder-friction-inertial.png \
+	../images/encoder-rotary-friction-on-fixed-pulley-with-weighted-moving-pulley.png,encoder-rotary-friction-on-fixed-pulley-with-weighted-moving-pulley.png \
+	../images/encoder-rotary-axis-pulley-axis.png,encoder-rotary-axis-pulley-axis.png \
+	../images/encoder-axis-inertial.png,encoder-axis-inertial.png \
+	../images/encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png,encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png
 
 IMAGES = $(top_srcdir)/images/chronojump-logo-2013.png \
          $(top_srcdir)/images/chronojump-logo-2013_320.png \
