Added inertia-momentum calculation

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -1,4 +1,5 @@
 encoderdatadir = @datadir@/@PACKAGE@/encoder
 
 dist_encoderdata_DATA = pyserial_pyper.py \
-	     graph.R
+	     graph.R \
+	     inertia-momentum.R
