Encoder calcs done with gearedDown and angles

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -276,6 +276,7 @@ RESOURCES = \
 	../images/encoder-linear-inv-on-person-weighted-moving-pulley2.png,encoder-linear-inv-on-person-weighted-moving-pulley2.png \
 	../images/encoder-linear-on-weighted-moving-pulley.png,encoder-linear-on-weighted-moving-pulley.png \
 	../images/encoder-linear-inclined-plane.png,encoder-linear-inclined-plane.png \
+	../images/encoder-linear-inclined-plane-weight-diff-angle.png,encoder-linear-inclined-plane-weight-diff-angle.png \
 	../images/encoder-rotary-friction-pulley.png,encoder-rotary-friction-pulley.png \
 	../images/encoder-rotary-friction-pulley-axis.png,encoder-rotary-friction-pulley-axis.png \
 	../images/encoder-rotary-friction-side-inertial.png,encoder-rotary-friction-side-inertial.png \
