extrema was missing on RDotNet

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -2,4 +2,5 @@ encoderdatadir = @datadir@/@PACKAGE@/encoder
 
 dist_encoderdata_DATA = pyserial_pyper.py \
 	     graph.R \
-	     inertia-momentum.R
+	     inertia-momentum.R \
+	     util.R
