neuromuscularProfile has own R file. graph.R extrema to util.R

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -3,4 +3,5 @@ encoderdatadir = @datadir@/@PACKAGE@/encoder
 dist_encoderdata_DATA = pyserial_pyper.py \
 	     graph.R \
 	     inertia-momentum.R \
+	     neuromuscularProfile.R \
 	     util.R
