Import csv name 1/2 columns (50%)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -265,6 +265,8 @@ RESOURCES = \
 	../images/gtk-open-plus.png,gtk-open-plus.png \
 	../images/import-csv-noheaders.png,import-csv-noheaders.png \
 	../images/import-csv-headers.png,import-csv-headers.png \
+	../images/import-csv-name-1-column.png,import-csv-name-1-column.png \
+	../images/import-csv-name-2-columns.png,import-csv-name-2-columns.png \
 	../images/calendar.png,calendar.png \
 	../images/chronojump-logo-2013_320.png,chronojump-logo-2013_320.png \
 	../images/chronojump-logo-2013.png,chronojump-logo-2013.png \
