--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,6 +28,7 @@ src/gui/encoderTreeviews.cs
 src/gui/evaluator.cs
 src/gui/event.cs
 src/gui/eventExecute.cs
+src/gui/executeAuto.cs
 src/gui/genericWindow.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
