call to graph.R FFFast. Fixed neuromuscular call

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -1,6 +1,7 @@
 encoderdatadir = @datadir@/@PACKAGE@/encoder
 
 dist_encoderdata_DATA = pyserial_pyper.py \
+	     call_graph.R \
 	     graph.R \
 	     inertia-momentum.R \
 	     neuromuscularProfile.R \
