--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -162,6 +162,9 @@ SOURCES = \
 RESOURCES = \
 	../glade/chronojump.glade\
 	../images/mini/no_image.png,mini/no_image.png \
+	../images/chronojump-jumps-small.png,chronojump-jumps-small.png \
+	../images/chronojump-runs-small.png,chronojump-runs-small.png \
+	../images/chronojump-encoder-small.jpg,chronojump-encoder-small.jpg \
 	../images/agility_505.png,agility_505.png\
 	../images/mini/agility_505.png,mini/agility_505.png \
 	../images/agility_20yard.png,agility_20yard.png\
