--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ CesarPlayer/Utils/Device.cs
 CesarPlayer/Utils/MediaFile.cs
 CesarPlayer/Utils/PreviewMediaFile.cs
 glade/chronojump.glade
+glade/chronojump.ui
 libcesarplayer/bacon-video-widget-gst-0.10.c
 libcesarplayer/video-utils.c
 src/chronojump.cs
@@ -48,7 +49,6 @@ src/gui/server.cs
 src/gui/session.cs
 src/gui/stats.cs
 src/jumpType.cs
-src/platform.cs
 src/pulseType.cs
 src/report.cs
 src/runType.cs
