--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,9 @@
-EXTRA_DIST = build/m4
+EXTRA_DIST = win32/chronojump_innosetup.iss.in win32/Makefile.in glade/chronojump.glade glade/chronojump.ui
+CLEANFILES = win32/Makefile win32/chronojump_innosetup.iss
 
 ACLOCAL_AMFLAGS = -I build/m4 -I build/m4/shave -I build/m4/shamrock
 
-SUBDIRS = chronopic-firmware \
+SUBDIRS = build chronopic-firmware \
 	 rdotnet encoder libcesarplayer CesarPlayer src po manual chronojump_server
 
 if OSTYPE_LINUX
