--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Andoni Morales Alastruey <ylatuya@gmail.com>
 Build-Depends: debhelper (>= 5), autotools-dev, cdbs,
  pkg-config, mono-devel, libgtk2.0-cil-dev, libglade2.0-cil-dev,
  libmono-sqlite2.0-cil, libmono-winforms2.0-cil, cli-common-dev,
- python2.6, python-wxgtk2.8, python-serial
+ python, python-wxgtk2.8, python-serial, libgtk2.0-dev,
+ libgstreamer0.10-dev, libgstreamer-plugins-base0.10-dev
 Standards-Version: 3.8.3
 
 Package: chronojump
@@ -13,7 +14,9 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},libmono2.0-cil,
  libgtk2.0-cil, libmono-sqlite2.0-cil,
  libmono-winforms2.0-cil, r-base-core,
- python2.6, python-wxgtk2.8, python-serial
+ python, python-wxgtk2.8, python-serial,
+ gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
+ gstreamer0.10-plugins-ugly
 Description: Measurement, management and statistics of sport short-time tests 
  Chronojump is an open hardware, free software and multiplatform complete system
  for measurement, management and statistics of sport short-time tests. 
