--- a/win32/chronojump_innosetup.iss.in
+++ b/win32/chronojump_innosetup.iss.in
@@ -57,12 +57,12 @@ Name: "{group}\Chronojump mini"; Filename: "{app}\bin\rxvt.exe"; Parameters:"-e 
 Name: "{group}\Chronopic Firmware Recorder "; Filename: "{app}\bin\chronopic-firmwarecord-dir\chronopic-firmwarecord.exe"; WorkingDir: "{app}\bin\chronopic-firmwarecord-dir"
 Name: "{group}\Chronojump mini"; Filename: "{app}\bin\rxvt.exe"; Parameters:"-e ./Chronojump_mini.exe" ; WorkingDir: "{app}\bin" ; IconFileName: "{app}\share\chronojump\images\chronojump_icon.ico"
 Name: "{commondesktop}\Chronojump"; Filename: "{app}\bin\Chronojump.exe"; WorkingDir: "{app}\bin"; Tasks: desktopicon
-Name: "{group}\Install Chronopic driver"; Filename: "{app}\drivers\CDM20814_Setup.exe"; WorkingDir: "{app}\drivers"
+Name: "{group}\Install Chronopic driver"; Filename: "{app}\drivers\CDM_v2.10.00_WHQL_Certified.exe"; WorkingDir: "{app}\drivers"
 ; Name: "{group}\Chronojump Manual spanish"; Filename: "{app}\share\doc\chronojump\chronojump_manual_es.pdf"
 ; Name: "{group}\Chronojump Manual english"; Filename: "{app}\share\doc\chronojump\chronojump_manual_en.pdf"
 Name: "{group}\{cm:UninstallProgram,Chronojump}"; Filename: "{uninstallexe}"
 
 [Run]
-Filename: "{app}\drivers\CDM20814_Setup.exe"; StatusMsg: "Installing Chronopic driver"; Tasks: install_driver; Flags: skipifsilent
+Filename: "{app}\drivers\CDM_v2.10.00_WHQL_Certified.exe"; StatusMsg: "Installing Chronopic driver"; Tasks: install_driver; Flags: skipifsilent
 Filename: "{app}\bin\Chronojump.exe"; Description: "{cm:LaunchProgram,ChronoJump}"; Flags: nowait postinstall skipifsilent
 
