--- a/chronopic-firmware/chronopic-firmwarecord/chronopic-firmwarecord.in
+++ b/chronopic-firmware/chronopic-firmwarecord/chronopic-firmwarecord.in
@@ -103,11 +103,11 @@ class MyFrame(wx.Frame):
         self.panel_1 = wx.Panel(self, -1)
         self.sizer_4_copy_staticbox = wx.StaticBox(self.panel_1, -1, "Port / Puerto")
         self.sizer_2_staticbox = wx.StaticBox(self.panel_1, -1, "Process / Proceso")
-        self.sizer_firmware_staticbox = wx.StaticBox(self.panel_1, -1, "Select Firmware for Chronopic")
+        self.sizer_firmware_staticbox = wx.StaticBox(self.panel_1, -1, "Select / Seleccionar Firmware")
         self.frame_1_statusbar = self.CreateStatusBar(1, 0)
         self.text_ctrl_2 = wx.TextCtrl(self.panel_1, -1, "")
-        self.button_firmware_jumps = wx.Button(self.panel_1, -1, "Jumps", style=wx.BU_EXACTFIT)
-        self.button_firmware_runs = wx.Button(self.panel_1, -1, "Runs", style=wx.BU_EXACTFIT)
+        self.button_firmware_jumps = wx.Button(self.panel_1, -1, "Jumps / Saltos", style=wx.BU_EXACTFIT)
+        self.button_firmware_runs = wx.Button(self.panel_1, -1, "Runs / Carreras", style=wx.BU_EXACTFIT)
         self.button_firmware_led = wx.Button(self.panel_1, -1, "Led (test)", style=wx.BU_EXACTFIT)
         #self.button_2 = wx.Button(self.panel_1, -1, "Search / Buscar", style=wx.BU_EXACTFIT)
         self.button_7 = wx.Button(self.panel_1, -1, "Record / Grabar", style=wx.BU_EXACTFIT)
@@ -157,7 +157,8 @@ class MyFrame(wx.Frame):
         self.frame_1_statusbar.SetStatusWidths([-1])
         # statusbar fields
         #frame_1_statusbar_fields = ["Change / Cambiar Chronopic firmware"]
-        frame_1_statusbar_fields = ["Firmwares in Chronojump\\share\\Chronojump\\firmware"]
+        #frame_1_statusbar_fields = ["Firmwares in Chronojump\\share\\Chronojump\\firmware"]
+        frame_1_statusbar_fields = [""]
         for i in range(len(frame_1_statusbar_fields)):
             self.frame_1_statusbar.SetStatusText(frame_1_statusbar_fields[i], i)
         self.text_ctrl_2.SetMinSize((450, 27))
